[package]
name = "ertos"
version = "0.1.0"
authors = ["Sean Wilson <sean.wilson@ghs.com>"]
edition = "2018"

[lib]
name = "ertos"
crate-type = ["staticlib"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
[dependencies]
compiler_builtins = { git = "https://github.com/rust-lang/compiler-builtins" }
